tests/baselines/reference/overloadResolutionOverCTLambda.errors.txt
tests/cases/compiler/overloadResolutionOverCTLambda.ts(2,5): error TS2345: Argument of type '(a: number) => number' is not assignable to parameter of type '(item: number) => boolean'.
  Signature '(item: number): boolean' has no corresponding signature in '(a: number) => number'
    Type 'number' is not assignable to type 'boolean'.


==== tests/cases/compiler/overloadResolutionOverCTLambda.ts (1 errors) ====
    function foo(b: (item: number) => boolean) { }
    foo(a => a); // can not convert (number)=>bool to (number)=>number
        ~~~~~~
!!! error TS2345: Argument of type '(a: number) => number' is not assignable to parameter of type '(item: number) => boolean'.
!!! error TS2345:   Signature '(item: number): boolean' has no corresponding signature in '(a: number) => number'
!!! error TS2345:     Type 'number' is not assignable to type 'boolean'.